--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -14,6 +14,8 @@ website:
         text: Day 2
       - href: day3.qmd
         text: Day 3
+      - href: about.qmd
+        text: Meet your instructors
         
 resources: 
     - "data/*"
